iptables
# Generated by iptables-save v1.8.7 on Sun Jan 14 15:20:36 2024
*filter
:INPUT ACCEPT [6876:371821]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [46625:8247324]
:SYN-FLOOD - [0:0]
:UDP - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j LOG --log-prefix "IPTABLES PING: "
-A INPUT -s 127.0.0.1/32 -p icmp -m comment --comment "PING 드랍" -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j LOG --log-prefix "IPTABLES TCP INVALID: "
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -m comment --comment "비정상 TCP 드랍" -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN -j LOG --log-prefix "IPTABLES TCP INVALID:"
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN -m comment --comment "비정상 TCP 드랍" -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j LOG --log-prefix "IPTABLES TCP NONE:"
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -m comment --comment "비정상 TCP 드랍" -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j SYN-FLOOD
-A INPUT -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j SYN-FLOOD
-A INPUT -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j SYN-FLOOD
-A INPUT -p tcp -m tcp --tcp-flags FIN,ACK FIN -j SYN-FLOOD
-A INPUT -p udp -m comment --comment "모든 UDP는 해당 체인으로" -j UDP
-A INPUT -p tcp -m tcp --dport 22 -m connlimit --connlimit-above 3 --connlimit-mask 32 --connlimit-saddr -m comment --comment "SSH 연결 제한 3" -j DROP
-A SYN-FLOOD -m limit --limit 100/sec --limit-burst 150 -j DROP
-A SYN-FLOOD -j LOG --log-prefix "IPTABLES SYN FLOOD: "
-A SYN-FLOOD -j DROP
-A UDP -m recent --update --seconds 1 --hitcount 100 --name DEFAULT --mask 255.255.255.255 --rsource -j LOG --log-prefix "IPTABLES UDP FLOOD:"
-A UDP -m recent --update --seconds 1 --hitcount 100 --name DEFAULT --mask 255.255.255.255 --rsource -j DROP
COMMIT
# Completed on Sun Jan 14 15:20:36 2024
